--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Modular LLM Operations Container - Distributed system for LLM inf
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "datasets>=4.0.0",
     "fastapi>=0.116.1",
     "pytest>=8.4.2",
     "python-multipart>=0.0.20",
