--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "transformers>=4.56.1",
     "trl>=0.23.0",
     "uvicorn>=0.35.0",
+    "vllm>=0.10.1.1",
 ]
 
 [project.optional-dependencies]
