--- a/exp/run/05_dpo_plus_inference_report.yaml
+++ b/exp/run/05_dpo_plus_inference_report.yaml
@@ -97,7 +97,7 @@ spec:
         data:
           type: "dataset"
           url: "truthfulqa/truthful_qa"
-          config: "generation"
+          name: "generation"
           split: "validation[:200]"
           column: "question"
           shuffle: true
