--- a/exp/post_train/01_2_multi_dataset_liner_inference.yaml
+++ b/exp/post_train/01_2_multi_dataset_liner_inference.yaml
@@ -18,19 +18,21 @@ spec:
       gpu:
         type: "any"
         count: 1
+        memory: "24Gi"
+
+  model:
+    source:
+      type: "huggingface"
+      identifier: "meta-llama/Llama-3.2-3B-Instruct"
+      revision: "main"
+    vllm:
+      gpu_memory_utilization: 0.85
+      trust_remote_code: true
 
   stages:
     - name: gsm8k-pass
       spec:
         taskType: "inference"
-        model:
-          source:
-            type: "huggingface"
-            identifier: "meta-llama/Llama-3.2-1B-Instruct"
-            revision: "main"
-          vllm:
-            gpu_memory_utilization: 0.85
-            trust_remote_code: true
         data:
           type: "dataset"
           url: "openai/gsm8k"
@@ -57,14 +59,6 @@ spec:
     - name: truthfulqa-pass
       spec:
         taskType: "inference"
-        model:
-          source:
-            type: "huggingface"
-            identifier: "meta-llama/Llama-3.2-3B-Instruct"
-            revision: "main"
-          vllm:
-            gpu_memory_utilization: 0.85
-            trust_remote_code: true
         data:
           type: "dataset"
           url: "truthfulqa/truthful_qa"
@@ -91,14 +85,6 @@ spec:
     - name: mmlu-pass
       spec:
         taskType: "inference"
-        model:
-          source:
-            type: "huggingface"
-            identifier: "meta-llama/Llama-3.2-3B-Instruct"
-            revision: "main"
-          vllm:
-            gpu_memory_utilization: 0.85
-            trust_remote_code: true
         data:
           type: "dataset"
           url: "cais/mmlu"
