--- a/exp/post_train/04_lora_then_inference.yaml
+++ b/exp/post_train/04_lora_then_inference.yaml
@@ -1,10 +1,11 @@
+# 使用 LoRA 对 llama 1B 在 GSM8K 上做快速适配，并立刻加载合并权重在 GSM8K 上进行推理评估。
 apiVersion: mloc/v1
 kind: LoRASFTTask
 metadata:
-  name: llama32-3b-lora-and-infer
+  name: llama1b-lora-transfer-eval
   owner: demo
   annotations:
-    description: "Train a LoRA adapter on GSM8K, then immediately run inference with the merged weights"
+    description: "LoRA adaptation on GSM8K followed by merged-weight inference on GSM8K"
 
 spec:
   taskType: "lora_sft"
@@ -12,24 +13,23 @@ spec:
   resources:
     replicas: 1
     hardware:
-      cpu: "16"
-      memory: "64Gi"
+      cpu: "12"
+      memory: "48Gi"
       gpu:
         type: "any"
         count: 1
-        memory: "48Gi"
+        memory: "24Gi"
 
   model:
     source:
       type: "huggingface"
-      identifier: "meta-llama/Llama-3.2-3B-Instruct"
+      identifier: "meta-llama/Llama-3.2-1B-Instruct"
       revision: "main"
 
   stages:
     - name: lora-train
       spec:
         taskType: "lora_sft"
-
         lora:
           r: 16
           alpha: 32
@@ -41,42 +41,39 @@ spec:
             - "v_proj"
             - "o_proj"
           task_type: "CAUSAL_LM"
-
         data:
           dataset_name: "openai/gsm8k"
           config_name: "main"
-          split: "train[:100]"
+          split: "train[:1%]"
           prompt_column: "question"
           response_column: "answer"
-          separator: "\n\nAnswer: "
-
+          separator: "\n\nReference answer: "
+          max_samples: 200
         training:
-          allow_multi_gpu: false
           num_train_epochs: 1
           batch_size: 2
           gradient_accumulation_steps: 4
           learning_rate: 2.0e-4
           max_seq_length: 512
-          logging_steps: 5
-          save_steps: 40
+          logging_steps: 20
+          save_steps: 80
           save_model: true
-          gradient_checkpointing: true
+          gradient_checkpointing: false
           packing: false
-          bf16: true
-
+          fp16: true
         output:
           destination:
             type: "http"
             url: "http://localhost:8000/api/v1/results"
+            timeoutSec: 30
           artifacts:
             - "responses.json"
             - "final_lora"
             - "logs"
 
-    - name: lora-infer
+    - name: gsm8k-inference
       spec:
         taskType: "inference"
-
         model:
           adapters:
             - type: "lora"
@@ -84,10 +81,6 @@ spec:
               taskId: "${lora-train.result.task_id}"
               url: "${lora-train.result.final_lora_archive_url}"
               apply: "merge"
-          vllm:
-            gpu_memory_utilization: 0.6
-            trust_remote_code: true
-
         data:
           type: "dataset"
           url: "openai/gsm8k"
@@ -95,19 +88,18 @@ spec:
           split: "train[:200]"
           column: "question"
           shuffle: true
-          seed: 99
-
+          seed: 11
         inference:
           system_prompt: |
-            Use the adapter-trained reasoning style to solve the math word problem accurately.
+            Apply the math-specialist LoRA adapter to solve the word problem step by step and end with "Answer: <value>".
           max_tokens: 256
           temperature: 0.2
           top_p: 0.9
-
         output:
           destination:
-            type: "local"
-            path: "./runs/11_lora_sft_plus_inference/inference"
+            type: "http"
+            url: "http://localhost:8000/api/v1/results"
+            timeoutSec: 30
           artifacts:
             - "responses.json"
             - "logs"
