--- a/exp/train/01_2_multi_dataset_liner_inference.yaml
+++ b/exp/train/01_2_multi_dataset_liner_inference.yaml
@@ -1,11 +1,11 @@
-# 顺序在 GSM8K、TruthfulQA 与 TriviaQA 上运行 llama 1B 推理，比较跨领域表现并产出分阶段结果。
+# 顺序在 GSM8K、TruthfulQA 与 MMLU 上运行 llama 1B 推理，比较跨领域表现并产出分阶段结果。
 apiVersion: mloc/v1
 kind: InferenceTask
 metadata:
   name: llama1b-linear-multi-eval
   owner: demo
   annotations:
-    description: "Sequential inference over math, factual QA, and open-domain trivia datasets"
+    description: "Sequential inference over math, factual QA, and MMLU-style multiple-choice datasets"
 
 spec:
   taskType: "inference"
@@ -18,11 +18,12 @@ spec:
       gpu:
         type: "any"
         count: 1
+        memory: "24Gi"
 
   model:
     source:
       type: "huggingface"
-      identifier: "meta-llama/Llama-3.2-1B-Instruct"
+      identifier: "meta-llama/Llama-3.2-3B-Instruct"
       revision: "main"
     vllm:
       gpu_memory_utilization: 0.85
