--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "datasets>=4.0.0",
     "fastapi>=0.116.1",
+    "nvidia-ml-py>=13.580.82",
     "pytest>=8.4.2",
     "python-multipart>=0.0.20",
     "pyyaml>=6.0.2",
