--- a/exp/data_train/03_02_inference_then_sft.yaml
+++ b/exp/data_train/03_02_inference_then_sft.yaml
@@ -1,14 +1,14 @@
-# 先用 llama 1B 生成鼓励式回复，再使用生成的数据作为 PPO 训练提示。
+# 先运行推理生成示范答案，再使用生成的对话进行轻量级 SFT 训练。
 apiVersion: mloc/v1
 kind: TrainingTask
 metadata:
-  name: llama1b-infer-then-ppo
+  name: llama1b-infer-then-sft
   owner: demo
   annotations:
-    description: "Collect uplifting responses via inference before running PPO alignment"
+    description: "Bootstrap GSM8K demonstrations via inference before fine-tuning with SFT"
 
 spec:
-  taskType: "ppo"
+  taskType: "sft"
 
   resources:
     replicas: 1
@@ -18,24 +18,35 @@ spec:
       gpu:
         type: "any"
         count: 1
+        memory: "48Gi"
 
   model:
     source:
       type: "huggingface"
       identifier: "meta-llama/Llama-3.2-1B-Instruct"
       revision: "main"
-      trust_remote_code: false
-    config:
-      fp16: true
-      device_map_auto: true
-    vllm:
-      gpu_memory_utilization: 0.85
-      trust_remote_code: true
+
+  output:
+    destination:
+      type: "http"
+      url: "http://localhost:8000/api/v1/results"
+      timeoutSec: 30
+    artifacts:
+      - "responses.json"
+      - "final_model"
 
   stages:
-    - name: motivation-bootstrap
+    - name: gsm8k-bootstrap
       spec:
         taskType: "inference"
+        model:
+          source:
+            type: "huggingface"
+            identifier: "meta-llama/Llama-3.2-1B-Instruct"
+            revision: "main"
+          vllm:
+            gpu_memory_utilization: 0.85
+            trust_remote_code: true
         data:
           type: "dataset"
           url: "openai/gsm8k"
@@ -54,59 +65,56 @@ spec:
           top_p: 0.9
         postprocess:
           jsonl_export:
-            path: "artifacts/ppo_prompts.jsonl"
+            path: "artifacts/sft_pairs.jsonl"
             fields:
-              query:
+              prompt:
                 from: "metadata"
                 key: "prompt"
-              reference_response:
+              response:
+                from: "output"
+              reference_answer:
                 from: "metadata"
                 key: "reference_answer"
-              draft_response:
-                from: "output"
             required_fields:
-              - "query"
+              - "prompt"
+              - "response"
         output:
           destination:
             type: "http"
             url: "http://localhost:8000/api/v1/results"
             timeoutSec: 30
           artifacts:
-            - "artifacts/ppo_prompts.jsonl"
+            - "artifacts/sft_pairs.jsonl"
             - "responses.json"
             - "logs"
 
-    - name: ppo-train
+    - name: sft-train
       spec:
-        taskType: "ppo"
-        reward_model:
-          identifier: "cardiffnlp/twitter-roberta-base-sentiment-latest"
-          type: "sentiment"
+        taskType: "sft"
         data:
           jsonl:
-            path: "${motivation-bootstrap.result.jsonl_export.path}"
-            query_field: "query"
+            path: "${gsm8k-bootstrap.result.jsonl_export.path}"
+            prompt_field: "prompt"
+            response_field: "response"
+          separator: "\n\nAnswer: "
+          max_samples: 200
         training:
-          learning_rate: 1.41e-5
+          num_train_epochs: 1
           batch_size: 1
-          per_device_train_batch_size: 1
-          mini_batch_size: 1
-          gradient_accumulation_steps: 1
-          steps: 2
-          ppo_epochs: 1
-          target_kl: 0.1
-          seed: 42
+          gradient_accumulation_steps: 4
+          learning_rate: 5.0e-5
+          max_seq_length: 256
+          logging_steps: 10
+          save_steps: 500
           save_model: true
-          save_freq: 32
-        generation:
-          max_new_tokens: 32
-          temperature: 0.7
-          do_sample: true
+          gradient_checkpointing: true
+          packing: false
+          auto_deepspeed_stage: 2
         output:
           destination:
             type: "http"
             url: "http://localhost:8000/api/v1/results"
           artifacts:
             - "responses.json"
-            - "checkpoints"
+            - "final_model"
             - "logs"
