--- a/exp/data_train/05_02_inference_then_dpo.yaml
+++ b/exp/data_train/05_02_inference_then_dpo.yaml
@@ -103,6 +103,7 @@ spec:
           destination:
             type: "http"
             url: "http://localhost:8000/api/v1/results"
+            timeoutSec: 600
           artifacts:
             - "responses.json"
             - "checkpoints"
