--- a/exp/data_train/06_02_inference_then_ppo.yaml
+++ b/exp/data_train/06_02_inference_then_ppo.yaml
@@ -108,6 +108,7 @@ spec:
           destination:
             type: "http"
             url: "http://localhost:8000/api/v1/results"
+            timeoutSec: 600
           artifacts:
             - "responses.json"
             - "checkpoints"
