--- a/exp/post_train/06_ppo_plus_mtbench_inference.yaml
+++ b/exp/post_train/06_ppo_plus_mtbench_inference.yaml
@@ -64,6 +64,7 @@ spec:
           destination:
             type: "http"
             url: "http://localhost:8000/api/v1/results"
+            timeoutSec: 600
           artifacts:
             - "responses.json"
             - "checkpoints"
